--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     th,td{border:1px solid #ddd; padding:8px; text-align:left; font-size:13px;}
     th{background:#f6f6f6;}
     .warn{color:#b45309;}
+    .ok{color:#166534;}
+    .mono{font-family:ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;}
   </style>
 </head>
 <body>
@@ -60,49 +62,114 @@
 (function(){
   const AMOUNT = 100000;
 
-  function setStatus(msg, isWarn=false){
-    const el = document.getElementById('status');
-    el.innerHTML = isWarn ? `<span class="warn">${msg}</span>` : msg;
+  // ====== CATEGORY LISTS (from your Word doc lists) ======
+  // NOTE: Matching is done using a normalized form (trim + collapse spaces + strip NBSP).
+  // So "HDFC Bank", "HDFC  Bank", or "HDFC Bank " will all match.
+  const COMPANY_LISTS = {
+    "Excellent": new Set([
+      "Apar Inds.","APL Apollo Tubes","Asian Paints","AU Small Finance","Bajaj Auto",
+      "Bajaj Finance","Berger Paints","Bharat Electron","Blue Jet Health","Blue Star",
+      "BSE","Cams Services","CG Power & Ind","Cholaman.Inv.&Fn","Coal India",
+      "Coforge","Cummins India","Doms Industries","eClerx Services","Eicher Motors",
+      "Esab India","Gabriel India","Garden Reach Sh.","Havells India","HDFC AMC",
+      "HDFC Bank","Hero MotoCorp","Hind.Aeronautics","Hyundai Motor I","I R C T C",
+      "ICICI Bank","Indrapr.Medical","Infosys","Ingersoll-Rand","ITC","K P R Mill Ltd",
+      "Kotak Mah. Bank","KPIT Technologi.","Lloyds Metals","LTI Mindtree",
+      "Motherson Wiring","Muthoot Finance","Nestle India","NMDC","Page Industries",
+      "Persistent Syste","Polycab India","Praj Industries","R Systems Intl.",
+      "Redington","Safari Inds.","SBI Cards","Sharda Motor","Solar Industries",
+      "Sonata Software","Sun Pharma.Inds.","Supreme Inds.","Supreme Petroch.",
+      "TCS","Tips Music","Titan Company","Triveni Turbine","Tube Investments",
+      "Varun Beverages","Volt.Transform.","Waaree Energies","Zydus Lifesci."
+    ]),
+    "Good": new Set([
+      "360 ONE","3M India","Aadhar Hsg. Fin.","Aavas Financiers","Abbott India",
+      "Acutaas Chemical","Adani Power","Adani Total Gas","Aditya AMC",
+      "Aditya Birla Cap","Aditya Vision","Ador Welding","Aegis Logistics","Affle 3i",
+      "Ahluwalia Contr.","AIA Engineering","Ajanta Pharma","Akzo Nobel",
+      "Alivus Life","Alkem Lab","Alkyl Amines","Amara Raja Ener.","Amber Enterp.",
+      "Amrutanjan Healt","Anand Rathi Wea.","Angel One","Apollo Hospitals",
+      "Apollo Tyres","Aptus Value Hou.","Archean Chemical","Ashoka Buildcon",
+      "ASK Automotive","Astra Microwave","Astral","Astrazeneca Phar",
+      "Aurobindo Pharma","Automotive Axles","Avanti Feeds","Avenue Super.",
+      "Axis Bank","B P C L","Bajaj Consumer","Bajaj Finserv","Bajaj Holdings",
+      "Balkrishna Inds","Bandhan Bank","Bank Of Baroda","Bank Of India",
+      "Bank of Maha","BASF India","Bata India","Bayer CropSci.","BEML Ltd",
+      "Bharat Bijlee","Bharat Dynamics","Bharat Forge","Bharti Airtel",
+      "Bharti Hexacom","Bikaji Foods","Birlasoft Ltd","Blue Dart Expres",
+      "Bosch","Britannia Inds.","C D S L","C P C L","C.E. Info System",
+      "Can Fin Homes","Canara Bank","Capacit'e Infra.","Caplin Point Lab",
+      "Carborundum Uni.","CARE Ratings","Carysil","Castrol India","CEAT",
+      "Cello World","Century Plyboard","Cera Sanitary.","Chambal Fert.",
+      "CIE Automotive","Cigniti Tech.","Cipla","City Union Bank","Clean Science",
+      "CMS Info Systems","Cochin Shipyard","Cohance Life","Colgate-Palmoliv",
+      "Concord Biotech","Coromandel Inter","Craftsman Auto",
+      "CreditAcc. Gram.","CRISIL","Crompton Gr. Con","Cyient",
+      "Dabur India","Data Pattern","DCB Bank","DCM Shriram",
+      "Deepak Fertilis.","Deepak Nitrite","Delta Corp","Dhanuka Agritech",
+      "Diffusion Eng","Disa India","Divi's Lab.","Dixon Technolog.",
+      "Dr Lal Pathlabs","Dr Reddy's Labs"
+      // If you have the remaining "Good" names, paste them here too.
+    ]),
+    "Average": new Set([
+      "A B Real Estate","Aarti Drugs","Aarti Industries","Aarti Pharma","ACC",
+      "Action Const.Eq.","Adani Enterp.","Adani Ports","ADF Foods",
+      "Advanced Enzyme","Aether Industri.","Afcons Infrastr.",
+      "Akums Drugs","Alembic Pharma","Alicon Cast.","Allcargo Logist.",
+      "Altius Telecom","Ambuja Cements","Anant Raj","Antelopus Selan",
+      "Anupam Rasayan","Apeejay Surrend.","Apollo Pipes","Arrow Greentech"
+      // If you have the remaining "Average" names, paste them here too.
+    ]),
+    "Below average": new Set([
+      "Adani Energy Sol","Adani Green","Aditya Bir. Fas.","Alok Industries",
+      "Asian Granito","Aster DM Health.","Atul Auto","Bajaj Hindusthan",
+      "Borosil Renew.","Chola Financial","Cube Highways","Delhivery",
+      "GMR Airports","Godrej Industrie","Godrej Propert.","IFCI",
+      "India Cements","IRB Infra.Devl.","ITI","Mahindra Life",
+      "Medplus Health","Meghmani Organi.","Muthoot Cap.Serv",
+      "Netwrk.18 Media","NLC India","NMDC Steel","Nuvoco Vistas",
+      "Ola Electric","PC Jeweller","Prestige Estates","Prime Securities",
+      "Prism Johnson","PTC Industries","Raymond Lifestyl",
+      "Reliance Infra.","Reliance Power","Restaurant Brand",
+      "Sh.Renuka Sugar","Sobha","SPARC","Sterling & Wils.",
+      "Sterlite Tech.","Stove Kraft","Swan Corp","Swiggy",
+      "Tata Tele. Mah.","Tejas Networks","The Ramco Cement",
+      "TVS Supply","Valor Estate","Vodafone Idea","Wockhardt"
+    ])
+  };
+
+  function normCompany(s){
+    if (s == null) return "";
+    return String(s)
+      .replace(/\u00A0/g, " ")      // NBSP -> space
+      .replace(/\s+/g, " ")        // collapse spaces
+      .trim();
   }
 
-  function excelDateToJS(v){
-    // SheetJS often returns Date objects if cellDates=true, else numbers or strings.
-    if (v instanceof Date) return v;
-    return null;
+  function buildNormalizedSet(set){
+    const out = new Set();
+    for (const x of set) out.add(normCompany(x));
+    return out;
+  }
+
+  const COMPANY_LISTS_N = {
+    "Excellent": buildNormalizedSet(COMPANY_LISTS["Excellent"]),
+    "Good": buildNormalizedSet(COMPANY_LISTS["Good"]),
+    "Average": buildNormalizedSet(COMPANY_LISTS["Average"]),
+    "Below average": buildNormalizedSet(COMPANY_LISTS["Below average"])
+  };
+
+  function setStatus(msg, kind=""){
+    const el = document.getElementById('status');
+    if (kind === "warn") el.innerHTML = `<span class="warn">${msg}</span>`;
+    else if (kind === "ok") el.innerHTML = `<span class="ok">${msg}</span>`;
+    else el.innerHTML = msg;
   }
 
   function readSheetRows(wb, sheetName){
     const sheet = wb.Sheets[sheetName];
     if (!sheet) return null;
-    // raw:true keeps numbers, cellDates:true attempts to parse Excel dates.
     return XLSX.utils.sheet_to_json(sheet, { header: 1, raw: true, defval: null });
-  }
-
-  function parseMasterList(wb){
-    // Prefer reading from "Master list" sheet (present in MyAlgo new.xlsx)
-    const rows = readSheetRows(wb, "Master list");
-    const sets = {
-      "Excellent": new Set(),
-      "Good": new Set(),
-      "Average": new Set(),
-      "Below average": new Set()
-    };
-    if (!rows) return sets;
-
-    let current = null;
-    for (let i=0;i<rows.length;i++){
-      const v = rows[i] && rows[i][2]; // Column C has category labels and names in provided file
-      if (!v) continue;
-      const s = String(v).trim();
-      if (sets[s]) { current = s; continue; }
-      if (current && s) sets[current].add(s);
-    }
-    return sets;
-  }
-
-  function buildCompanyFilter(sets, category){
-    if (category === "All") return null;
-    return sets[category] || new Set();
   }
 
   function findSelIndicesForSheet(rows){
@@ -114,28 +181,7 @@
     return sel;
   }
 
-  function buildCompanySeries(rows){
-    // rows: header + data. We build company -> array of points sorted by appearance (sheet already date-wise).
-    // Columns: Date=B(1), Company=D(3), Price=E(4), Signal=G(6)
-    const series = new Map();
-    for (let i=1;i<rows.length;i++){
-      const r = rows[i];
-      if (!r) continue;
-      const company = r[3];
-      const price = r[4];
-      const signal = r[6];
-      const date = r[1];
-      if (company == null) continue;
-      if (typeof price !== "number") continue;
-      const key = String(company).trim();
-      if (!series.has(key)) series.set(key, []);
-      series.get(key).push({ idx:i, date, price, signal });
-    }
-    return series;
-  }
-
-  function computeForSel(company, initialPrice){
-    // Algorithm from the Word doc:
+  function computeForSel(initialPrice){
     // Trigger prices at -10%, -20%, -30% of initial, rounded down to integer.
     const t1 = Math.floor(initialPrice * 0.90);
     const t2 = Math.floor(initialPrice * 0.80);
@@ -146,18 +192,11 @@
   }
 
   function generateOutputRows(results){
-    // Results: array of {company, t1,t2,t3,avg,close}
-    // Output sheet layout (matching provided workbook):
     const out = [];
-    // Rows 1-6 blank
     for (let i=0;i<6;i++) out.push([null,null,null,null,null,null,null]);
-    // Row 7
     out.push(["Output Table", null, null, null, null, null, null]);
-    // Row 8 blank
     out.push([null,null,null,null,null,null,null]);
-    // Row 9 header
     out.push(["Sr","Company","Investment","Amount","Trigger Price","Average Price","Close Price"]);
-    // Row 10 note
     out.push([null,null,null,null,null,null,"30% above average price"]);
 
     let sr = 1;
@@ -170,8 +209,9 @@
   }
 
   function renderPreview(outputAOA, maxRows=20){
-    const start = 8; // show from header row roughly
+    const start = 8;
     const slice = outputAOA.slice(start, Math.min(outputAOA.length, start+maxRows));
+    if (!slice.length) { document.getElementById("preview").innerHTML=""; return; }
     let html = `<table><thead><tr>` +
       slice[0].map(x=>`<th>${x===null?"":String(x)}</th>`).join("") +
       `</tr></thead><tbody>`;
@@ -180,6 +220,11 @@
     }
     html += `</tbody></table>`;
     document.getElementById("preview").innerHTML = html;
+  }
+
+  function buildCompanyFilter(category){
+    if (category === "All") return null;
+    return COMPANY_LISTS_N[category] || new Set();
   }
 
   async function process(){
@@ -193,69 +238,60 @@
     const sourceSheet = document.getElementById("sourceSelect").value;
     const category = document.getElementById("categorySelect").value;
 
-    const sets = parseMasterList(wb);
-    const filterSet = buildCompanyFilter(sets, category);
-
     const rows = readSheetRows(wb, sourceSheet);
     if (!rows){ alert(`Sheet not found: ${sourceSheet}`); return; }
 
-    // Collect results
-    const results = [];
+    const filterSet = buildCompanyFilter(category);
 
-    if (sourceSheet === "Input") {
-      // Exactly one company: find first "Sel", compute from its price
-      const selIdx = findSelIndicesForSheet(rows)[0];
-      if (selIdx == null){ alert("'Sel' not found in Input sheet"); return; }
-      const company = String(rows[selIdx][3] || "").trim();
-      const initial = rows[selIdx][4];
-      if (typeof initial !== "number"){ alert("Initial price is missing/invalid at Sel row."); return; }
+    const results = [];
+    const sels = findSelIndicesForSheet(rows);
+
+    if (!sels.length){
+      alert(`"Sel" not found in sheet: ${sourceSheet}`);
+      return;
+    }
+
+    for (const idx of sels){
+      const r = rows[idx];
+      const companyRaw = r[3];
+      const company = normCompany(companyRaw);
+      const initial = r[4];
+      if (!company) continue;
+      if (typeof initial !== "number") continue;
 
       if (filterSet && !filterSet.has(company)){
-        setStatus(`Input company "${company}" is not in category "${category}". No rows generated.`, true);
-      } else {
-        const calc = computeForSel(company, initial);
-        results.push({ company, ...calc });
+        continue;
       }
-    } else {
-      // Data sheet: each "Sel" row is a separate signal for that company.
-      // We'll compute based on initial price at Sel row (same as Input algorithm).
-      const sels = findSelIndicesForSheet(rows);
-      if (!sels.length){ alert("'Sel' not found in Data sheet"); return; }
 
-      for (const idx of sels){
-        const r = rows[idx];
-        const company = String(r[3] || "").trim();
-        const initial = r[4];
-        if (typeof initial !== "number") continue;
-        if (filterSet && !filterSet.has(company)) continue;
-
-        const calc = computeForSel(company, initial);
-        results.push({ company, ...calc });
-      }
+      const calc = computeForSel(initial);
+      results.push({ company, ...calc });
     }
 
     if (!results.length){
-      setStatus("No matching rows generated (check your category filter).", true);
+      // Show debug hint: what company names were seen in the sheet for Sel rows
+      const seen = sels.slice(0, 10).map(i => normCompany(rows[i][3])).filter(Boolean);
+      setStatus(
+        `No matching rows generated for category "${category}". ` +
+        `First Sel companies seen: <span class="mono">${seen.join(" | ") || "(none)"}</span>`,
+        "warn"
+      );
       document.getElementById("preview").innerHTML = "";
       return;
     }
 
-    // Build output sheet content
     const outputAOA = generateOutputRows(results);
 
-    // Create new workbook (keeps it simple and deterministic)
     const outWb = XLSX.utils.book_new();
     const outSheet = XLSX.utils.aoa_to_sheet(outputAOA);
     XLSX.utils.book_append_sheet(outWb, outSheet, "Output");
 
-    // Optional preview
     renderPreview(outputAOA);
 
     const suffix = sourceSheet === "Input" ? "Single" : "All";
     const fname = `MyAlgo_Output_${suffix}_${category.replace(/\s+/g,'_')}.xlsx`;
     XLSX.writeFile(outWb, fname);
 
-    setStatus(`Done. Generated ${results.length} company record(s) → ${results.length*3} output rows. Download started.`);
+    setStatus(`Done. Generated ${results.length} signal(s) → ${results.length*3} output rows. Download started.`, "ok");
   }
 
   document.getElementById("btnRun").addEventListener("click", process);
